--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,26 +34,24 @@
         android:id="@+id/addRecipeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
         android:onClick="showAddDishActivity"
-        android:text="Añadir plato"
+        android:text="@string/addDish"
         android:textSize="18sp"
         android:layout_below="@+id/dishName"
         android:layout_alignRight="@+id/dishName"
-        android:layout_alignEnd="@+id/dishName"
-        android:layout_marginTop="88dp" />
+        android:layout_alignEnd="@+id/dishName" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/addRecipeButton"
-        android:layout_alignLeft="@+id/addRecipeButton"
-        android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/addRecipeButton"
-        android:layout_alignStart="@+id/addRecipeButton"
-        android:layout_marginBottom="16dp"
+        android:layout_below="@+id/addRecipeButton"
+        android:layout_marginTop="19dp"
         android:onClick="showAllDishesActivity"
-        android:text="Mostrar platos"
+        android:text="@string/showAllDishes"
         android:textSize="18sp" />
 
 
