--- a/app/src/main/res/layout/activity_add_new_dish.xml
+++ b/app/src/main/res/layout/activity_add_new_dish.xml
@@ -9,6 +9,7 @@
         android:id="@+id/dishNameInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLength="@integer/dishName_maxLength"
         android:layout_marginTop="224dp"
         android:ems="10"
         android:inputType="textPersonName"
