--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,26 +21,28 @@
         android:id="@+id/dishName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scrollHorizontally="true"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:width="150dp"
+        android:text="sdfdfsfsdffffffffffffffffffffrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr"
+        android:textSize="20dp"
+        android:layout_below="@+id/botonDamePlato"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:width="250dp"
-        android:height="50dp"
-        android:gravity="center"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textSize="24sp"
-        android:visibility="visible" />
+        android:layout_marginTop="56dp" />
+
 
     <Button
         android:id="@+id/addRecipeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/dishName"
+        android:layout_alignRight="@+id/dishName"
+        android:layout_below="@+id/dishName"
         android:layout_marginTop="76dp"
         android:onClick="showAddDishActivity"
         android:text="@string/addDish"
-        android:textSize="18sp"
-        android:layout_below="@+id/dishName"
-        android:layout_alignRight="@+id/dishName"
-        android:layout_alignEnd="@+id/dishName" />
+        android:textSize="18sp" />
 
     <Button
         android:id="@+id/button2"
