dishes name improvements: name and order
Now the first letter of a dishname is capitalized
besides, when listing all dishes they are displayed in alphabetical order

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,12 @@
         android:id="@+id/dishName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:scrollHorizontally="true"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:width="150dp"
-        android:text="sdfdfsfsdffffffffffffffffffffrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr"
+        android:maxLines="2"
+        android:width="250dp"
+        android:height="50dp"
         android:textSize="20dp"
         android:layout_below="@+id/botonDamePlato"
         android:layout_centerHorizontal="true"
