fixed bug when capitalizing dish name
when dictating a dish name, capitalization did not work for some reason, so I always capitalize dish name before saving it

--- a/app/src/main/res/layout/activity_add_new_dish.xml
+++ b/app/src/main/res/layout/activity_add_new_dish.xml
@@ -10,9 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLength="@integer/dishName_maxLength"
+        android:inputType="textCapSentences"
         android:layout_marginTop="224dp"
         android:ems="10"
-        android:inputType="textPersonName"
         tools:layout_editor_absoluteX="73dp"
         tools:layout_editor_absoluteY="87dp"
         android:layout_marginRight="69dp"
