--- a/app/src/main/res/layout/activity_edit_dish.xml
+++ b/app/src/main/res/layout/activity_edit_dish.xml
@@ -11,8 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
+        android:inputType="textCapSentences"
         tools:layout_editor_absoluteX="52dp"
         tools:layout_editor_absoluteY="91dp"
         android:layout_above="@+id/editDishButton"
